crates/vize_atelier_core/src/codegen/snapshots/vize_atelier_core__codegen__tests__codegen_forwarded_default_slot_is_marked_forwarded.snap
---
source: crates/vize_atelier_core/src/codegen/tests.rs
expression: output.as_str()
---
const { resolveComponent: _resolveComponent, renderSlot: _renderSlot, openBlock: _openBlock, createBlock: _createBlock, withCtx: _withCtx } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_MkSwiper = _resolveComponent("MkSwiper")
  
  return (_openBlock(), _createBlock(_component_MkSwiper, null, {
    default: _withCtx(() => [
      _renderSlot(_ctx.$slots, "default")
    ]),
    _: 3 /* FORWARDED */
  }))
}
